gcc/testsuite/g++.dg/cpp1y/lambda-ice1.C
// PR c++/72800
// { dg-do compile { target c++14 } }

void foo ()
{
  [n {}] {};  // { dg-error "one element|deducing" }
}
